--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 resources/js/common/templates.js
 resources/js/common/templates.js
 resources/js/common/templates.js
+resources/js/common/templates.js
