--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ resources/js/common/templates.js
 resources/js/common/templates.js
 resources/js/common/templates.js
 resources/js/common/templates.js
+resources/js/common/templates.js
