--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -79,4 +79,8 @@
   <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
  </listener>
  
+  <session-config>
+  <session-timeout>1440</session-timeout>
+ </session-config>
+ 
 </web-app>
