--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
 /resources/bower_components
 /node_modules
-.idea/modules.xml
-.idea/vcs.xml
-.idea/workspace.xml
-.idea/webapp.iml
-.idea/misc.xml
-.idea/jsLibraryMappings.xml
-resources/js/common/templates.js
-resources/js/common/templates.js
-resources/js/common/templates.js
-resources/js/common/templates.js
-resources/js/common/templates.js
+.idea
