--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "backbone": "^1.3.3",
     "jquery.marquee": "jQuery.Marquee#^1.3.9",
     "jquery-sticky": "^1.0.3",
-    "select2": "^4.0.2"
+    "select2": "^4.0.2",
+    "html2canvas": "^0.4.1"
   }
 }
