--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -51,7 +51,7 @@
 	</servlet-mapping>
 	
 	<welcome-file-list>
-		<welcome-file>login.jsp</welcome-file>
+		<welcome-file>login.html</welcome-file>
 	</welcome-file-list>
 	
 	<!-- Config for accessing JS/CSS files from with JSP files -->
